--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="{%static 'css/bootstrap.min.css'%}"/>
     <title>CourseApp | {% block page_title%} {%endblock page_title%}</title>
 </head>
 <body>
@@ -13,11 +14,8 @@
     <div class="container mt-3">
         <div class="row">
             <div class="col-3">
-             <div class="list-group">
-                <a href="" class="list-group-item list-group-item-action">Programlama</a>
-                <a href="" class="list-group-item list-group-item-action">Mobil Uygulama</a>
-                <a href="" class="list-group-item list-group-item-action">Web Geliştirme</a>
-             </div>
+                
+                {% include 'courses/partials/_categories.html' %}
             </div>
             <div class="col-9">
                  {% block content %}
@@ -25,6 +23,6 @@
             </div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js" ></script>
+    <script src="{%static 'js/bootstrap.min'%}" ></script>
 </body>
 </html>
