--- a/courses/templates/courses/partials/_categories.html
+++ b/courses/templates/courses/partials/_categories.html
@@ -1,6 +1,8 @@
 <div class="list-group">
-    <a href="/kurslar" class="list-group-item list-group-item-action">Tüm Kurslar</a>
+    {% if request.path == '/kurslar/' or '/kurslar/kategori/' in request.path  %}
+         <a href="/kurslar" class="list-group-item list-group-item-action">Tüm Kurslar</a>
+    {% endif %}
     {%for category in categories %} 
      <a href="{% url 'courseByCategory' category.slug %}" class="list-group-item list-group-item-action {% if seciliKategori == category.slug%}active{%endif%}">{{category.name|title}}</a>
-     {% endfor %} 
+    {% endfor %} 
  </div>
