--- a/courses/templates/courses/course-list.html
+++ b/courses/templates/courses/course-list.html
@@ -23,7 +23,10 @@
               <td><img src="{% static 'img/'|add:course.imageUrl %}"  class="img fluid" style="width:120px"></td>
               <td>{{course.title}}</td>
               <td>{{course.slug}}</td>
-              <td> <a href=" {% url 'course_edit' course.id %}" class="btn btn-primary btn-sm">Güncelle</a></td>
+              <td> 
+                <a href=" {% url 'course_edit' course.id %}" class="btn btn-primary btn-sm">Güncelle</a>
+                <a href=" {% url 'course_delete' course.id %}" class="btn btn-danger btn-sm">Sil</a>
+              </td>
             </tr>
           
           {% endfor %}
